@@ -1,4 +1,6 @@
 == CHANGELOG ==
+27/02/17:
+ - Fixed bug in to_vtk.py script where Dataset was created even if no datafile or listfile were specified, which created an error.
 24/02/17:
  - Changed the components list in data_plot to a table, with each type (e.g. impedance, tipper, phase, etc.) as headers.
  - Added bostick plotting to gplot and data_plot.
